[package]
name = "gpudevicemem"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "gpudevicemem"
path = "src/lib.rs"

[features]
cuda9 = ["f16", "cuda_blas/cuda9"]
f16 = ["float", "cuda_dnn/f16", "memarray/f16"]

[build-dependencies]
bindgen = "*"
cc = "*"
walkdir = "*"

[dependencies]
arrayidx = { path = "../arrayidx" }
cuda = { path = "../libcuda" }
cuda_blas = { path = "../cuda_blas" }
cuda_dnn = { path = "../cuda_dnn" }
cuda_rand = { path = "../cuda_rand" }
float = { path = "../float", optional = true }
lazy_static = "*"
memarray = { path = "../memarray" }
num-traits = "*"
parking_lot = { version = "^0.5", features = ["nightly"] }
